src/compiler/snapshots/rslox__compiler__error__tests__unexpected_tokens.snap
---
source: src/compiler/error.rs
expression: "format!(\"{:?}\", miette::Error::from(err).with_source_code(\"1.2;\"))"
---
  × expected one of the following: 'number, eof', found ';'
   ╭────
 1 │ 1.2;
   ·  ┬
   ·  ╰── here
   ╰────
